--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+private-key=4f2fda538520f5a2525be48a149fe2caf166f796
+api-key=d179a68123c002407553b99139d00ecd
+path-characters=v1/public/characters
+path-comics=v1/public/comics
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -11,3 +16,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.context-path=/treinamento
+server.port=8082
